@@ -250,8 +250,12 @@ int parse_packet_soap(zval *this_ptr, char *buffer, int buffer_size, sdlFunction
 				while (zend_hash_get_current_data(fn->responseParameters, (void **)&h_param) == SUCCESS) {
 					param = (*h_param);
 					if (fnb->style == SOAP_DOCUMENT) {
-						name = param->encode->details.type_str;
-						ns = param->encode->details.ns;
+						if (param->element) {
+							name = param->encode->details.type_str;
+							ns = param->encode->details.ns;
+						} else {
+							name = param->paramName;
+						}
 					} else {
 						name = fn->responseName;
 						/* ns = ? */
